# Magisk_Rafaelia

./: .dependency-matrix.yml  ARM64_COMPILATION_TROUBLESHOOTING_GUIDE.md  ARM64_COMPILATION_WORKFLOW_DIAGRAM.md  ARM64_DOCUMENTATION_INDEX.md  ARM64_SETUP_SUMMARY.md  AUTHORS.md  AUTHORSHIP_ANALYSIS.md  AUTHORSHIP_SUMMARY.md  BAREMETAL_ARCHITECTURE_ANALYSIS.md  BAREMETAL_IMPLEMENTATION_SUMMARY.md  BUILD_ARM64.md  CI_MONITORING_QUICKREF.md  COMO_OBTER_APK.md  COMPILAR_ARM64.md  CONTRIBUTING.md  COPYRIGHT_HEADER_CORRECTION_GUIDE.md  FORMULAS_IMPLEMENTATION_SUMMARY.md  GET_APK_QUICK.md  GOVERNANCE_ACTIVATION_SUMMARY.md  GOVERNANCE_IMPLEMENTATION.md  GOVERNANCE_SUMMARY.md  GUIA_COMPILACAO_ARM64_TROUBLESHOOTING.md  HARDWARE_OPTIMIZATION_GUIDE.md  HOW_TO_GET_APK.md  IMPLEMENTATION_COMPLETE_RAFAELIA.md  IMPLEMENTATION_SUMMARY_ARM64_DOCS.md  LICENSE  OBTER_APK_RAPIDO.md  PLACEHOLDER_IMPROVEMENTS.md  README.MD  README_ativar.md  SECURITY_SCAN_RESULTS.md  THIRD_PARTY_LICENSES.md  TWO_BRANCH_IMPLEMENTATION_SUMMARY.md  WORKFLOW_FIXES.md  ativar.py  ativar.txt  build.py  config.prop.sample  correct_headers.py  (+3 more)
docs/: ANDROID_COMPATIBILITY_BUG_HANDLER.md  ANDROID_COMPATIBILITY_IMPLEMENTATION_SUMMARY.md  BOOSTERS_PERFORMANCE_PT.md  BRANCHING_STRATEGY.md  BRANCH_CONSOLIDATION.md  BRANCH_PROTECTION.md  BUILD_RELEASE_CI_AUDIT_2026-05-05.md  BUILD_RELEASE_SOURCE_MAP_2026-05-05.md  DEPENDENCY_AUDIT.md  ENGINEERING_PLAYBOOK.md  IMPLEMENTATION_SUMMARY_OLD.md  INTEGRATION_SUMMARY.md  LANGUAGES.md  LEGAL_HEADERS_IMPLEMENTATION.md  MEMORY_OPTIMIZATION_GUIDE.md  MEMORY_OPTIMIZATION_SUMMARY.md  README.md  (+13 more)
native/: CMakeLists.txt
native/bootimg/: bootimg.h  bootimg_parser.c  bootimg_parser.h
native/cpio/: cpio_parser.c  cpio_parser.h
native/magiskboot/: magiskboot.cold  magiskboot.okdc  unpack.c  unpack.h
native/raf/: raf_utils.c  raf_utils.h
native/ramdisk/: ramdisk.c  ramdisk.h
native/repack/: repack.c  repack.h
native/scripts/: generate_prebuilts.sh
native/src/base/: argh.rs  asm_utils.h  base.cpp  build.rs  cstr.rs  cxx_extern.rs  dir.rs  files.hpp  files.rs  lib.rs  logging.hpp  logging.rs  lowlevel.h  lowlevel.hpp  misc.hpp  misc.rs  mount.rs  result.rs  xwrap.hpp  xwrap.rs
native/src/base/derive/: decodable.rs  lib.rs
native/src/base/derive/argh/: errors.rs  mod.rs  parse_attrs.rs
native/src/base/include/: base.hpp
native/src/boot/: bootimg.cpp  bootimg.hpp  build.rs  cli.rs  compress.rs  cpio.rs  dtb.rs  format.rs  lib.rs  magiskboot.hpp  patch.rs  payload.rs  sign.rs
native/src/core/: applet_stub.cpp  applets.cpp  bootstages.rs  build.rs  daemon.rs  db.rs  ecc_buffer.c  lib.rs  logging.rs  magisk.rs  module.rs  mount.rs  package.rs  rafaelia_audit.rs  rafaelia_entropy.rs  rafaelia_telemetry.rs  scripting.cpp  selinux.rs  socket.rs  sqlite.cpp  thread.rs  utils.cpp
native/src/core/deny/: cli.cpp  deny.hpp  logcat.cpp  utils.cpp
native/src/core/include/: core.hpp  ecc_buffer.h  sqlite.hpp
native/src/core/resetprop/: cli.rs  mod.rs  persist.rs  sys.cpp
native/src/core/su/: connect.rs  daemon.rs  db.rs  mod.rs  pts.rs  su.cpp
native/src/core/zygisk/: api.hpp  daemon.rs  entry.cpp  hook.cpp  jni_hooks.hpp  lowlevel_inject.cpp  mod.rs  module.cpp  module.hpp  zygisk.hpp
native/src/include/: codegen.rs  consts.hpp  consts.rs
native/src/init/: build.rs  getinfo.cpp  getinfo.rs  init.hpp  init.rs  lib.rs  logging.rs  mount.cpp  mount.rs  rootdir.cpp  rootdir.rs  selinux.rs  twostage.rs
native/src/sepolicy/: api.cpp  build.rs  cli.rs  lib.rs  policy.hpp  policydb.cpp  rules.rs  sepolicy.cpp  statement.rs
native/src/sepolicy/include/: sepolicy.hpp
(+222 files in other folders)
